# amazon-scraper-skill

./: README.md  README.txt  SKILL.md  openclaw-skill.json  pyproject.toml  urls_sample.txt
src/amazon_unified_scraper/: __init__.py  __main__.py  collector.py  detail_scraper.py  list_scraper.py  models.py  utils.py
