[tool.poetry]
name = "amazon-unified-scraper"
version = "0.1.0"
description = "Unified Amazon scraper: list page + detail page with anti-detection."
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "amazon_unified_scraper", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.4"
click = "^8.1.7"
pandas = "^2.2.2"
selenium = "^4.22.0"
beautifulsoup4 = "^4.12.0"
lxml = "^5.0.0"
pydantic-settings = "^2.3.4"
requests = "^2.33.1"
openpyxl = "^3.1.5"
pillow = "^12.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
